--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,8 @@
   font-family: 'Roboto';
   font-style: normal;
   font-weight: 500;
-  src: local('Roboto');
-  url('../fonts/robotomedium.woff2') format(woff2);
+  src: local('Roboto'),
+  url('../fonts/robotomedium.woff2') format(woff2),
   url('../fonts/robotomedium.woff') format(woff);
 }
 
@@ -66,10 +66,6 @@ body {
   color: var(--basic-font-color);
 }
 
-.page a {
-  text-decoration: none;
-}
-
 img {
   max-width: 100%;
   height: auto;
@@ -108,10 +104,27 @@ img {
   list-style: none;
 }
 
+.sub-menu {
+  box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.4);
+  border-radius: 4px;
+}
+
+.sub-menu li {
+  width: 143px;
+}
+
+.sub-menu li:first-child a {
+  border-bottom: 1px solid rgba(50, 50, 50, 0.2);
+  font-weight: 700;
+  font-style: normal;
+  font-size: 14px;
+  line-height: 18px;
+  padding-left: 10px;
+}
+
 .main-menu li {
   position: relative;
   display: inline-block;
-  margin-left: 5px;
 }
 .main-menu a {
   display: block;
@@ -119,12 +132,17 @@ img {
   font-size: 16px;
   line-height: 18px;
   color: var(--basic-font-color);
-  padding: 9px 13px;
+  padding: 9px 10px;
 }
 
 .main-menu-press {
   background-color: rgba(208, 112, 88, 1);
   border-radius: 26px;
+  text-decoration: none;
+}
+
+.main-menu-link {
+  text-decoration: underline solid rgba(255, 255, 255, 0.2);
 }
 
 .main-menu a:hover {
@@ -135,8 +153,6 @@ img {
 
 .main-menu a:active {
   background-color: var(--main-menu-active-button);
-  box-shadow: 0px 2px 1px var(--main-menu-shadow-color),
-              inset 0px 2px 1px 0px rgba(105, 105, 105, 1);
 }
 
 .main-menu .sub-menu {
@@ -154,10 +170,12 @@ img {
   font-weight: normal;
   font-size: 14px;
   line-height: 18px;
+  text-decoration: none;
 }
 
 .main-menu > li:hover .sub-menu {
   display: block;
+  z-index: 1;
 }
 
 .sub-menu a:hover {
@@ -167,11 +185,36 @@ img {
 
 .sub-menu a:active {
   background-color: var(--active-pink-color);
+  border: none;
+}
+
+.active-link a {
+  background-color: #D07058;
+  color: #ffffff;
+}
+
+.active-link a:hover {
+  background-color: #D07058;
+  color: #ffffff;
 }
 
 .main-header-buttons {
   display: flex;
   flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 16px;
+  width: 245px;
+  margin-left: 10px;
+  margin-right: 27px;
+}
+
+.catalog-header-buttons {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 16px;
+  width: 270px;
+  margin-left: -10px;
   margin-right: 27px;
 }
 
@@ -181,17 +224,18 @@ img {
   border-radius: 20px;
 }
 
-.main-header-buttons {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  margin-top: 14px;
-}
-
 .main-header-buttons a {
   color: var(--basic-font-color);
   font-size: 14px;
   font-height: 16px;
+  text-decoration: none;
+}
+
+.catalog-header-buttons a {
+  color: var(--basic-font-color);
+  font-size: 14px;
+  font-height: 16px;
+  text-decoration: none;
 }
 
 .search {
@@ -254,6 +298,10 @@ img {
   color: var(--black-color);
 }
 
+.catalog-header-buttons .cart-catalog {
+  color: var(--black-color);
+}
+
 .cart-catalog::before {
   content: "";
   position: absolute;
@@ -287,6 +335,11 @@ img {
   background-color: var(--basic-font-color);
 }
 
+.catalog-header-buttons a:hover {
+  color: var(--black-color);
+  background-color: var(--basic-font-color);
+}
+
 .header-item {
   color: var(--basic-font-color);
   font-weight: bold;
@@ -298,9 +351,7 @@ img {
 }
 
 .header-contacts-wrapper {
-  display: grid;
   width: 1200px;
-  grid-template-columns: 2fr 1fr;
   position: relative;
   /*margin: 0 auto;*/
 }
@@ -317,6 +368,9 @@ img {
   line-height: 24px;
   padding-top: 8px;
   margin-right: 27px;
+  position: relative;
+  text-decoration: none;
+  z-index: 1;
 }
 
 .header-phone:hover {
@@ -357,6 +411,7 @@ img {
   text-align: center;
   color: #ffffff;
   height: 200px;
+  margin-bottom: 60px;
 }
 
 .best-offer h2 {
@@ -390,6 +445,7 @@ img {
   font-weight: 800;
   padding: 0;
   margin: 0;
+  margin-top: 60px;
   margin-bottom: 20px;
 }
 
@@ -468,10 +524,12 @@ img {
 
 .product-free-button {
   align-self: flex-end;
-  box-sizing: border-box;
+  /* box-sizing: border-box; */
   flex-basis: auto;
   margin-top: auto;
-  height: 48px;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: bold;
   padding: 15px 22px;
   margin-bottom: 22px;
   margin-right: 22px;
@@ -484,6 +542,9 @@ img {
   background: linear-gradient(180deg, #F26843 0%, #E74A35 100%);
   border-radius: 70px;
   border: none;
+  outline: none;
+  text-shadow: 0px 2px 5px rgba(160, 32, 11, 0.76);
+  box-shadow: 0px 2px 2px rgba(172, 16, 0, 0.64);
 }
 
 .button:hover {
@@ -499,12 +560,13 @@ img {
 
 .slider-controls {
   position: absolute;
-  bottom: 70px;
+  bottom: 5px;
   left: 20px;
   z-index: 20;
   display: flex;
-  width: 80px;
+  width: 75px;
   justify-content: space-between;
+  margin-left: 10px;
 }
 
 .slider-controls .current {
@@ -534,7 +596,7 @@ min-width: 940px;
 background-color: #849d8f;
 background-image: url("../img/pair-icecream01.png");
 background-repeat: no-repeat;
-background-position: center 100px;
+background-position: center 0px;
 }
 
 .chocolate-free {
@@ -678,14 +740,20 @@ background-position: center 100px;
 
 .goods-item-name > a {
   color: var(--basic-font-color);
+  text-decoration: underline solid rgba(255, 255, 255, 0.2);
   font-size: 16px;
   font-weight: 500;
   line-height: 22px;
-
+}
+/*
+.goods-item-name:hover > a {
+  color: rgba(255, 188, 158, 1);
+  position: relative;
+  z-index: 1;
 }
 
-/* .goods-item-name:hover > a {
-  color: rgba(255, 188, 158, 1);
+.goods-item-description:hover {
+    color: rgba(255, 188, 158, 1);
 } */
 
 .fast-view {
@@ -706,7 +774,7 @@ background-position: center 100px;
   display: grid;
   justify-items: center;
   height: 306px;
-  margin-top: -110px;
+  margin-top: -40px;
   margin-bottom: 40px;
 }
 
@@ -723,6 +791,7 @@ background-position: center 100px;
   font-weight: 500;
   padding-left: 20px;
   padding-right: 20px;
+  margin-top: 25px;
 }
 
 .features-list {
@@ -734,20 +803,19 @@ background-position: center 100px;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   grid-column-gap: 27px;
-  grid-row-gap: 33px;
   list-style: none;
 }
 
 .feature-item {
   position: relative;
-  padding-left: 23px;
+  padding-left: 35px;
 }
 
 .feature-item::before {
   content: "";
   position: absolute;
-  top: 10px;
-  left: -30px;
+  top: -10px;
+  left: -20px;
   width: 50px;
   height: 50px;
   background-repeat: no-repeat;
@@ -802,7 +870,7 @@ background-position: center 100px;
 
 .news-content h2 {
   padding: 0;
-  margin: 0;
+  margin-top: -10px;
 }
 
 .news {
@@ -833,6 +901,7 @@ background-position: center 100px;
 
 .mailing {
   position: relative;
+  box-sizing: border-box;
   width: 560px;
   height: 220px;
   background-color: var(--mailing-background);
@@ -841,17 +910,21 @@ background-position: center 100px;
   line-height: 22px;
   font-weight: normal;
   border-radius: 16px;
+  border: solid 5px #000000;
+  border-image: url("../img/border.png") 2 round round;
 }
 
 .mailing-container {
+  position: relative;
   display: flex;
   flex-direction: column;
   padding-left: 25px;
   width: 512px;
   padding-top: 10px;
+  z-index: 2;
 }
 
-.mailing::after {
+/* .mailing-container::after {
   content: "";
   width: 512px;
   height: 220px;
@@ -863,11 +936,42 @@ background-position: center 100px;
   position: absolute;
   top: 0px;
   left: 0px;
+  z-index: 0;
+} */
+
+.email {
+  width: 360px;
+  height: 44px;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ns-appearance: none;
+  appearance: none;
+  box-shadow: none;
+  outline: none;
+  border: 1px solid rgba(178, 178, 178, 0.52);
+  border-radius: 6px;
+  color: rgba(153, 153, 153, 1);
+  font-size: 16px;
+  line-height: 24px;
+}
+
+.email placeholder {
+  color: rgba(153, 153, 153, 153, 1);
+  font-size: 16px;
+  line-height: 24px;
+}
+
+.mailing-form {
+  margin-left: 25px;
+  margin-top: 20px;
 }
 
 .button-mailing {
   width: 130px;
   height: 44px;
+  outline: none;
+  text-shadow: 0px 2px 5px rgba(160, 32, 11, 0.76);
+  box-shadow: 0px 2px 2px rgba(172, 16, 0, 0.64);
 }
 
 .contacts {
@@ -890,19 +994,21 @@ background-position: center 100px;
 }
 
 .address-name {
-  font-size: 16px;
+  font-size: 14px;
   line-height: 20px;
   font-weight: normal;
   padding: 0;
-  margin: 0;
+  margin-top: 20px;
+  margin-left: 0px;
 }
 
 .address {
-  font-size: 18px;
+  font-size: 16px;
   line-height: 24px;
   font-weight: bold;
   padding: 0;
   margin: 0;
+  margin-top: -15px;
 }
 
 .tel-name {
@@ -911,6 +1017,7 @@ background-position: center 100px;
   font-weight: normal;
   padding: 0;
   margin: 0;
+  margin-top: 20px;
 }
 
 .contacts-phone {
@@ -919,26 +1026,29 @@ background-position: center 100px;
   line-height: 24px;
   font-weight: bold;
   padding: 0;
-  margin: 0;
+  margin-top: 20px;
+  text-decoration: none;
 }
 
 .opening-hours {
   font-size: 14px;
   line-height: 20px;
   font-weight: normal;
+  margin-top: 5px;
 }
 
 .contacts-button {
   width: 253px;
   height: 43px;
   align-items: center;
+  margin-left: 20px;
+  margin-top: 15px;
 }
 
 .map {
   height: 430px;
   background-color: #ffffff;
   padding: 0;
-  margin-bottom: 18px;
 }
 
 .map-position {
@@ -950,8 +1060,6 @@ background-position: center 100px;
 
 /*Catalog*/
 .page-catalog-header {
-  display: grid;
-  grid-template-columns: 1fr;
   margin-top: 10px;
 }
 .breadcrumbs {
@@ -967,7 +1075,7 @@ background-position: center 100px;
 }
 
 .breadcrumbs li {
-  font-family: 'Roboto', Arial, sans-serif;
+  font-family: "Roboto", Arial, sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 14px;
@@ -1001,6 +1109,7 @@ background-position: center 100px;
 
 .crumb > a {
   color: var(--basic-font-color);
+  text-decoration: none;
 }
 
 .main-headline {
@@ -1081,6 +1190,10 @@ background-position: center 100px;
   background-image: url("../img/arrow.svg");
   background-repeat: no-repeat;
   cursor: pointer;
+}
+
+.filter-sorting-box:hover::after {
+  background-image: url("../img/black-arrow.svg");
 }
 
 .select-ice:hover {
@@ -1195,10 +1308,14 @@ background-position: center 100px;
   user-select: none;
 }
 
+.radio-label {
+  padding-left: -20px;
+}
+
 .radio-input + label::before {
   content: "";
   position: absolute;
-  left: 6px;
+  left: -7px;
   top: 0;
   width: 16px;
   height: 16px;
@@ -1210,7 +1327,7 @@ background-position: center 100px;
   content: "";
   position: absolute;
   top: 8px;
-  left: 14px;
+  left: 1px;
   width: 8px;
   height: 8px;
   background-color: rgba(255, 255, 255, 0.8);
@@ -1313,6 +1430,7 @@ background-position: center 100px;
   color: var(--basic-font-color);
   background-color: rgba(255, 255, 255, 0.2);
   border: 2px solid rgba(255, 255, 255, 1);
+  outline: none;
 }
 
 .form-button:hover {
@@ -1354,12 +1472,14 @@ background-position: center 100px;
   font-size: 16px;
   line-height: 18px;
   width: 25px;
-  height: 20px;
+  height: 21px;
   border-radius: 50%;
-  padding-top: 5px;
+  padding-top: 4px;
+  /* padding-bottom: 4px; */
   padding-left: 0px;
   vertical-align: baseline;
   text-align: center;
+  text-decoration: none;
 }
 
 .pagination-item > a:hover {
@@ -1381,6 +1501,7 @@ background-position: center 100px;
   background-repeat: no-repeat;
   width: 20px;
   height: 20px;
+  margin-top: 5px;
   background-position: center;
 }
 
@@ -1389,6 +1510,7 @@ background-position: center 100px;
   background-repeat: no-repeat;
   width: 20px;
   height: 20px;
+  margin-top: 5px;
   background-position: center;
 }
 
@@ -1397,6 +1519,7 @@ background-position: center 100px;
   display: grid;
   grid-template-columns: 1fr 2fr 1fr;
   border-top: 1px solid rgba(255, 255, 255, 0.2);
+  padding-bottom: 30px;
 }
 
 .footer-social-links {
@@ -1404,6 +1527,10 @@ background-position: center 100px;
   flex-wrap: wrap;
   flex-basis: 200px;
   list-style: none;
+  margin: 0;
+  padding: 0;
+  margin-top: 15px;
+  margin-left: 25px;
 }
 
 .social-button {
@@ -1452,13 +1579,36 @@ background-position: center 100px;
 .footer-info-links {
   display: flex;
   flex-wrap: wrap;
-  width: 360px;
+  justify-content: center;
+  width: 350px;
   list-style: none;
   padding-left: 0;
+  margin: 0;
+  padding: 0;
+  margin-top: 30px;
+}
+
+.footer-info-links a {
+  text-decoration: underline solid rgba(255, 255, 255, 0.2);
 }
 
 .footer-info-links > li {
   flex-basis: 45%;
+}
+
+.link-heart {
+  position: relative;
+}
+
+.link-heart::after {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: -20px;
+  width: 15px;
+  height: 15px;
+  background-image: url("../img/heart.png");
+  background-repeat: no-repeat;
 }
 
 .footer-info a{
@@ -1474,11 +1624,21 @@ background-position: center 100px;
   padding-top: 18px;
 }
 
+.footer-copyright a {
+  text-decoration: none;
+}
+
+.footer-copyright img {
+  margin-left: -30px;
+}
+
 .footer-copyright-link {
+  display: block;
   color: var(--basic-font-color);
   font-size: 12px;
   line-height: 18px;
   font-weight: normal;
+  margin: 0;
 }
 
 .htmlacademy-link {
