--- a/css/style.css
+++ b/css/style.css
@@ -209,6 +209,16 @@ img {
   margin-right: 27px;
 }
 
+.search-wrapper {
+  display: flex;
+  position: relative;
+}
+
+.enter-wrapper {
+  display: flex;
+  position: relative;
+}
+
 .catalog-header-buttons {
   display: flex;
   flex-wrap: wrap;
@@ -225,10 +235,10 @@ img {
   border-radius: 20px;
 }
 
-.main-header-buttons a {
+.header-button {
   color: var(--basic-font-color);
   font-size: 14px;
-  font-height: 16px;
+  font-weight: normal;
   text-decoration: none;
 }
 
@@ -1041,11 +1051,28 @@ background-position: center 0px;
   padding: 0;
 }
 
+.map-container {
+  max-width: 1200px;
+  height: 430px;
+}
+
+.map-container iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
+}
+
 .map-position {
   position: relative;
   height: 430px;
   padding: 0;
   margin: 0;
+}
+
+.map-position img {
+  height: 100%;
 }
 
 /*Catalog*/
@@ -1634,4 +1661,208 @@ background-position: center 0px;
   line-height: 18px;
   font-weight: normal;
   text-decoration: underline solid rgba(255, 255, 255, 0.2);
+}
+
+/* Modal windows */
+.modal {
+  background-color: rgba(248, 247, 244, 1);
+  border-radius: 4px;
+  box-sizing: border-box;
+  box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.4);
+}
+
+.modal-search {
+  display: none;
+  position: absolute;
+  padding: 20px 15px;
+  width: 341px;
+  top: 35px;
+  right: 0px;
+}
+
+.search-wrapper:hover .modal-search {
+  display: block;
+  z-index: 1;
+}
+
+.form-input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ns-appearance: none;
+  appearance: none;
+  box-sizing: border-box;
+  border: 1px solid rgba(211, 211, 210, 1);
+  outline: none;
+  border-radius: 4px;
+  color: rgba(153, 153, 153, 1);
+  font-size: 14px;
+  line-height: 16px;
+  height: 44px;
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 311px;
+}
+
+.enter-wrapper:hover .modal-enter {
+  display: block;
+  z-index: 2;
+}
+
+.modal-enter {
+  display: none;
+  width: 277px;
+  padding: 20px 18px;
+  position: absolute;
+  top: 35px;
+  right: 0;
+}
+
+.modal-email-form {
+  width: 241px;
+  margin-bottom: 20px;
+}
+
+.modal-password-form {
+  width: 241px;
+}
+
+.modal-button {
+  font-size: 18px;
+  line-height: 16px;
+  font-weight: bold;
+  padding: 15px 25px;
+}
+
+.links-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  margin-top: 20px;
+  align-items: flex-start;
+}
+
+.links {
+  margin: 0;
+  padding-top: 10px;
+}
+
+.login-form-forgot {
+  margin-bottom: 5px;
+}
+
+.login-form-forgot,
+.login-form-sign-up {
+  display: block;
+  font-size: 13px;
+  line-height: 15px;
+  font-weight: normal;
+  color: rgba(50, 50, 50, 1);
+  text-decoration: underline solid rgba(50, 50, 50, 0.3);
+}
+
+.modal-feedback {
+  display: none;
+  position: fixed;
+  width: 477px;
+  height: 440px;
+  box-sizing: border-box;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  margin: auto;
+}
+
+.feedback-header {
+  font-family: "Roboto", Arial, sans-serif;
+  font-size: 24px;
+  line-height: 28px;
+  font-weight: 500;
+  color: rgba(50, 50, 50, 1);
+  margin: 0;
+  padding-left: 24px;
+  padding-top: 18px;
+}
+
+.feedback-input {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ns-appearance: none;
+  appearance: none;
+  border: solid 1px rgba(178, 178, 178, 0.52);
+  border-radius: 4px;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: normal;
+  color: rgba(153, 153, 153, 1);
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: 24px;
+  outline: none;
+  box-sizing: border-box;
+}
+
+.feedback-name {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  width: 267px;
+  height: 44px;
+}
+
+.feedback-email {
+  width: 267px;
+  height: 44px;
+}
+
+.feedback-area {
+  width: 428px;
+  height: 154px;
+  margin-top: 20px;
+  padding-top: 16px;
+}
+
+.modal-close {
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  width: 22px;
+  height: 22px;
+  border: 0;
+  background: rgba(248, 247, 244, 1);
+  cursor: pointer;
+}
+
+.modal-close::before,
+.modal-close::after {
+  content: "";
+  position: absolute;
+  top: 10px;
+  right: -3px;
+  width: 25px;
+  height: 2px;
+  background-color: rgba(35, 31, 32, 1);
+}
+
+.modal-close::before {
+  transform: rotate(45deg);
+}
+
+.modal-close::after {
+  transform: rotate(-45deg);
+}
+
+.feedback-button {
+  padding: 13px 23px;
+  font-size: 18px;
+  line-height: 24px;
+  font-weight: bold;
+  margin-top: 18px;
+  margin-bottom: 25px;
+  margin-right: 25px;
+}
+
+.feedback-button-wrapper {
+  display: flex;
+  justify-content: flex-end;
 }
