--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,7 @@ img {
   border-radius: 26px;
 }
 
-.main-menu > a:active {
+.main-menu a:active {
   background-color: var(--main-menu-active-button);
   box-shadow: inset 0px 2px 1px #696969;
 }
@@ -188,6 +188,7 @@ img {
 .sub-menu a:active {
   background-color: var(--active-pink-color);
   border: none;
+  box-shadow: none;
 }
 
 .active-link a {
@@ -250,7 +251,7 @@ img {
   text-decoration: none;
 }
 
-.catalog-header-buttons > a {
+.catalog-header-buttons a {
   color: var(--basic-font-color);
   font-size: 14px;
   line-height: 16px;
@@ -357,7 +358,7 @@ img {
   background-color: var(--basic-font-color);
 }
 
-.catalog-header-buttons > a:hover {
+.catalog-header-buttons a:hover {
   color: var(--black-color);
   background-color: var(--basic-font-color);
 }
@@ -705,8 +706,8 @@ background-position: center 0px;
   z-index: 7;
 }
 
-.goods-item:hover > .fast-view,
-.goods-item:focus > .fast-view {
+.goods-item:hover .fast-view,
+.goods-item:focus .fast-view {
   display: block;
   z-index: 10;
 }
@@ -763,23 +764,13 @@ background-position: center 0px;
   text-align: center;
 }
 
-.goods-item-name > a {
+.goods-item-name a {
   color: var(--basic-font-color);
   text-decoration: underline solid rgba(255, 255, 255, 0.2);
   font-size: 16px;
   font-weight: 500;
   line-height: 22px;
 }
-/*
-.goods-item-name:hover > a {
-  color: rgba(255, 188, 158, 1);
-  position: relative;
-  z-index: 1;
-}
-
-.goods-item-description:hover {
-    color: rgba(255, 188, 158, 1);
-} */
 
 .fast-view {
   position: absolute;
@@ -1127,7 +1118,7 @@ background-position: center 0px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
 
-.crumb > a {
+.crumb a {
   color: var(--basic-font-color);
   text-decoration: none;
 }
@@ -1473,7 +1464,7 @@ background-position: center 0px;
   margin-bottom: 30px;
 }
 
-.pagination > li {
+.pagination li {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
@@ -1484,7 +1475,7 @@ background-position: center 0px;
   margin-right: 10px;
 }
 
-.pagination-item > a{
+.pagination-item a{
   display: block;
   flex-wrap: wrap;
   align-content: flex-end;
@@ -1502,16 +1493,16 @@ background-position: center 0px;
   text-decoration: none;
 }
 
-.pagination-item > a:hover {
+.pagination-item a:hover {
   background: rgba(255, 255, 255, 0.2);
 }
 
-.pagination-item > a:active {
+.pagination-item a:active {
   color: var(--black-color);
   background: var(--basic-font-color);
 }
 
-.pagination-item-active > a{
+.pagination-item-active a{
   color: var(--black-color);
   background: var(--basic-font-color);
 }
@@ -1612,7 +1603,7 @@ background-position: center 0px;
   text-decoration: underline solid rgba(255, 255, 255, 0.2);
 }
 
-.footer-info-links > li {
+.footer-info-links li {
   flex-basis: 45%;
 }
 
@@ -1862,28 +1853,12 @@ background-position: center 0px;
   top: 35px;
   z-index: 1;
   display: none;
-  margin: 0;
   padding: 20px 20px;
   width: 540px;
-  list-style: none;
-  font-size: 13px;
-  line-height: 16px;
-  color: #323232;
-}
-
-.modal-cart > li {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  flex-direction: column;
 }
 
 .сart-table {
-  margin-top: 0;
-  padding: 0;
   width: 510px;
-  min-height: 107px;
-  list-style: none;
 }
 
 .cart-item {
@@ -1897,12 +1872,15 @@ background-position: center 0px;
 }
 
 .cart-item a {
+  font-size: 13px;
+  line-height: 16px;
   display: flex;
+  align-items: center;
   color: #323232;
   text-decoration: none;
 }
 
-.cart-last-item {
+.сart-table div:last-child {
   padding-bottom: 17px;
   border-bottom: 1px solid #cacac7;
 }
@@ -1913,7 +1891,6 @@ background-position: center 0px;
   top: 25px;
   width: 9px;
   height: 9px;
-  font-size: 0;
   background-color: transparent;
   background-image: url("../img/delete-position.svg");
   background-repeat: no-repeat;
@@ -1929,6 +1906,7 @@ background-position: center 0px;
 }
 
 .cart-item-title {
+  vertical-align: middle;
   display: block;
   width: 217px;
 }
