--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,10 @@ img {
   padding: 0;
 }
 
+.main-menu:focus-within .sub-menu {
+  display: block;
+}
+
 .main-menu,
 .sub-menu {
   list-style: none;
@@ -146,7 +150,8 @@ img {
   text-decoration: underline solid rgba(255, 255, 255, 0.2);
 }
 
-.main-menu a:hover {
+.main-menu a:hover,
+.main-menu a:focus {
   color: var(--black-color);
   background-color: var(--basic-font-color);
   border-radius: 26px;
@@ -180,7 +185,8 @@ img {
   z-index: 1;
 }
 
-.sub-menu a:hover {
+.sub-menu a:hover,
+.sub-menu a:focus {
   background-color: var(--hover-pink-color);
   border-radius: 0px;
 }
@@ -215,8 +221,17 @@ img {
   position: relative;
 }
 
+.search-wrapper:focus-within .modal-search {
+  display: block;
+}
+
 .enter-wrapper {
   position: relative;
+}
+
+.enter-wrapper:focus-within .modal-enter {
+  display: block;
+  z-index: 2;
 }
 
 .cart-wrapper {
@@ -271,7 +286,8 @@ img {
   top: 8px;
 }
 
-.search:hover path {
+.search:hover path,
+.search:focus path {
   fill: rgba(50, 50, 50, 1);
 }
 
@@ -291,7 +307,8 @@ img {
   top: 6px;
 }
 
-.enter:hover path {
+.enter:hover path,
+.enter:focus path {
   fill: rgba(50, 50, 50, 1);
 }
 
@@ -349,11 +366,13 @@ img {
   background-position: 0 0;
 }
 
-.cart:hover::before {
+.cart:hover::before,
+.cart:focus::before {
   background-image: url("../img/cart-full.svg");
 }
 
-.main-header-buttons a:hover {
+.main-header-buttons a:hover,
+.main-header-buttons a:focus {
   color: var(--black-color);
   background-color: var(--basic-font-color);
 }
@@ -376,8 +395,8 @@ img {
 .header-contacts-wrapper {
   width: 1200px;
   position: relative;
-  /*margin: 0 auto;*/
 }
+
 .header-contacts {
   justify-self: end;
   position: absolute;
@@ -396,7 +415,8 @@ img {
   z-index: 1;
 }
 
-.header-phone:hover {
+.header-phone:hover,
+.header-phone:focus {
   color: rgba(255, 188, 158, 1);
 }
 
@@ -571,7 +591,8 @@ img {
   box-shadow: 0px 2px 2px rgba(172, 16, 0, 0.64);
 }
 
-.button:hover {
+.button:hover,
+.button:focus {
   background: linear-gradient(0deg, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0.2)), linear-gradient(180deg, #F26843 0%, #E74A35 100%);
   box-shadow: 0px 2px 2px #AC1000;
   color: var(--basic-font-color);
@@ -700,14 +721,16 @@ background-position: center 0px;
 }
 
 .goods-item:hover::after,
-.goods-item:focus::after {
+.goods-item:focus::after,
+.goods-item:focus-within::after {
   box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.2);
   background-color: rgba(248, 247, 244, 0.2);
   z-index: 7;
 }
 
 .goods-item:hover .fast-view,
-.goods-item:focus .fast-view {
+.goods-item:focus .fast-view,
+.goods-item:focus-within .fast-view {
   display: block;
   z-index: 10;
 }
@@ -1557,7 +1580,8 @@ background-position: center 0px;
   border-radius: 50%;
 }
 
-.social-button:hover path {
+.social-button:hover path,
+.social-button:focus path {
   fill-opacity: 1;
 }
 
@@ -1880,7 +1904,7 @@ background-position: center 0px;
   text-decoration: none;
 }
 
-.сart-table div:last-child {
+.сart-table .cart-item:last-child {
   padding-bottom: 17px;
   border-bottom: 1px solid #cacac7;
 }
