--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,7 @@ img {
 
 .main-menu:focus-within .sub-menu {
   display: block;
+  z-index: 2;
 }
 
 .main-menu,
@@ -238,7 +239,8 @@ img {
   position: relative;
 }
 
-.cart-wrapper:hover .modal-cart {
+.cart-wrapper:hover .modal-cart,
+.cart-wrapper:focus-within .modal-cart {
   display: block;
   z-index: 2;
 }
@@ -267,7 +269,6 @@ img {
 }
 
 .catalog-header-buttons a {
-  color: var(--basic-font-color);
   font-size: 14px;
   line-height: 16px;
   text-decoration: none;
@@ -377,7 +378,9 @@ img {
   background-color: var(--basic-font-color);
 }
 
-.catalog-header-buttons a:hover {
+
+.catalog-header-buttons a:hover,
+.catalog-header-buttons a:focus {
   color: var(--black-color);
   background-color: var(--basic-font-color);
 }
@@ -1146,6 +1149,11 @@ background-position: center 0px;
   text-decoration: none;
 }
 
+.crumb a:hover,
+.crumb a:focus {
+  color: rgba(255, 188, 158, 1);
+}
+
 .main-headline {
   grid-column: 1/-1;
   justify-self: start;
@@ -1177,24 +1185,12 @@ background-position: center 0px;
   color: black;
 }
 
-/* .select-ice::after {
-  content: "";
-  position: absolute;
-  top: 20px;
-  right: 15px;
-  padding: 0;
-  background-image: url("../img/arrow.svg");
-  background: transparent;
-  cursor:pointer;
-} */
-
-
 .select-ice {
   -webkit-appearance: none;
   -moz-appearance: none;
   -ns-appearance: none;
   appearance: none;
-  outline: none;
+  /* outline: inherit; */
   position: relative;
   top: -8px;
   box-shadow: none;
@@ -1230,7 +1226,8 @@ background-position: center 0px;
   background-image: url("../img/black-arrow.svg");
 }
 
-.select-ice:hover {
+.select-ice:hover,
+.select-ice:focus {
   color: black;
 }
 
@@ -1342,10 +1339,6 @@ background-position: center 0px;
   user-select: none;
 }
 
-.radio-label {
-  padding-left: -20px;
-}
-
 .radio-input + label::before {
   content: "";
   position: absolute;
@@ -1357,6 +1350,22 @@ background-position: center 0px;
   border-radius: 50%;
 }
 
+.radio-input:hover + label::before,
+.radio-input:focus + label::before {
+  content: "";
+  position: absolute;
+  left: -7px;
+  top: 0;
+  width: 16px;
+  height: 16px;
+  border: 4px solid rgba(255, 255, 255, 1);
+  border-radius: 50%;
+}
+
+/* .radio-input:focus + label {
+  outline: 1px solid black;
+} */
+
 .radio-input:checked + label::after {
   content: "";
   position: absolute;
@@ -1365,6 +1374,18 @@ background-position: center 0px;
   width: 8px;
   height: 8px;
   background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 50%;
+}
+
+.radio-input:checked:hover + label::after,
+.radio-input:checked:focus + label::after {
+  content: "";
+  position: absolute;
+  top: 8px;
+  left: 1px;
+  width: 8px;
+  height: 8px;
+  background-color: rgba(255, 255, 255, 1);
   border-radius: 50%;
 }
 
@@ -1467,7 +1488,8 @@ background-position: center 0px;
   outline: none;
 }
 
-.form-button:hover {
+.form-button:hover,
+.form-button:focus {
   color: black;
   background-color: rgba(255, 255, 255, 1);
   cursor: pointer;
@@ -1710,7 +1732,7 @@ background-position: center 0px;
   appearance: none;
   box-sizing: border-box;
   border: 1px solid rgba(211, 211, 210, 1);
-  outline: none;
+  /* outline: none; */
   border-radius: 4px;
   color: rgba(153, 153, 153, 1);
   font-size: 14px;
@@ -1721,7 +1743,8 @@ background-position: center 0px;
   width: 311px;
 }
 
-.enter-wrapper:hover .modal-enter {
+.enter-wrapper:hover .modal-enter,
+.enter-wrapper:focus .modal-enter {
   display: block;
   z-index: 2;
 }
@@ -1818,7 +1841,7 @@ background-position: center 0px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: 24px;
-  outline: none;
+  /* outline: none; */
   box-sizing: border-box;
 }
 
