--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ img {
   padding: 0;
 }
 
-.main-menu:focus-within .sub-menu {
+.main-menu li:focus-within .sub-menu {
   display: block;
   z-index: 2;
 }
@@ -1257,6 +1257,10 @@ background-position: center 0px;
   margin-top: 7px;
 }
 
+.range-filter:hover {
+  cursor: pointer;
+}
+
 .filter-item legend {
   font-size: 14px;
   line-height: 16px;
@@ -1352,19 +1356,8 @@ background-position: center 0px;
 
 .radio-input:hover + label::before,
 .radio-input:focus + label::before {
-  content: "";
-  position: absolute;
-  left: -7px;
-  top: 0;
-  width: 16px;
-  height: 16px;
   border: 4px solid rgba(255, 255, 255, 1);
-  border-radius: 50%;
 }
-
-/* .radio-input:focus + label {
-  outline: 1px solid black;
-} */
 
 .radio-input:checked + label::after {
   content: "";
@@ -1379,14 +1372,7 @@ background-position: center 0px;
 
 .radio-input:checked:hover + label::after,
 .radio-input:checked:focus + label::after {
-  content: "";
-  position: absolute;
-  top: 8px;
-  left: 1px;
-  width: 8px;
-  height: 8px;
   background-color: rgba(255, 255, 255, 1);
-  border-radius: 50%;
 }
 
 .fillers-list-container {
@@ -1462,6 +1448,12 @@ background-position: center 0px;
   background-repeat: no-repeat;
 }
 
+.check-input:hover + label::before,
+.check-input:focus + label::before {
+  background-image: url("../img/checkbox-hover.svg");
+  background-repeat: no-repeat;
+}
+
 .check-input:checked + label::after {
   content: "";
   position: absolute;
@@ -1471,6 +1463,12 @@ background-position: center 0px;
   width: 24px;
   height: 24px;
   background-image: url("../img/checkbox-on.svg");
+  background-repeat: no-repeat;
+}
+
+.check-input:checked:hover + label::after,
+.check-input:checked:focus + label::after {
+  background-image: url("../img/checked-hover.svg");
   background-repeat: no-repeat;
 }
 
@@ -1510,30 +1508,21 @@ background-position: center 0px;
 }
 
 .pagination li {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  list-style: none;
-}
-
-.pagination-item {
   margin-right: 10px;
+  list-style: none;
 }
 
 .pagination-item a{
   display: block;
-  flex-wrap: wrap;
-  align-content: flex-end;
+  box-sizing: border-box;
   color: var(--basic-font-color);
   font-size: 16px;
   line-height: 18px;
-  width: 25px;
-  height: 21px;
+  width: 26px;
+  height: 26px;
   border-radius: 50%;
-  padding-top: 4px;
-  /* padding-bottom: 4px; */
-  padding-left: 0px;
-  vertical-align: baseline;
+  padding-top: 5px;
+  padding-bottom: 5px;
   text-align: center;
   text-decoration: none;
 }
@@ -1552,7 +1541,8 @@ background-position: center 0px;
   background: var(--basic-font-color);
 }
 
-.pagination-arrow-prev {
+.pagination-arrow-prev a {
+  display: block;
   background-image: url("../img/icon-left-small.svg");
   background-repeat: no-repeat;
   width: 20px;
@@ -1561,7 +1551,8 @@ background-position: center 0px;
   background-position: center;
 }
 
-.pagination-arrow-next {
+.pagination-arrow-next a {
+  display: block;
   background-image: url("../img/icon-right-small.svg");
   background-repeat: no-repeat;
   width: 20px;
@@ -1732,15 +1723,26 @@ background-position: center 0px;
   appearance: none;
   box-sizing: border-box;
   border: 1px solid rgba(211, 211, 210, 1);
-  /* outline: none; */
   border-radius: 4px;
-  color: rgba(153, 153, 153, 1);
-  font-size: 14px;
-  line-height: 16px;
+  color: #323232;
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: bold;
   height: 44px;
   padding-left: 15px;
   padding-right: 15px;
   width: 311px;
+}
+
+.form-input::placeholder {
+  color: rgba(153, 153, 153, 1);
+  font-weight: normal;
+}
+
+.form-input:focus {
+  outline: none;
+  border: 2px solid rgba(46, 136, 228, 0.52);
+  border-radius: 4px;
 }
 
 .enter-wrapper:hover .modal-enter,
